tests/error/modifier_errors/higher_order_mismatch.err
Error: Dagger constraint violation (at $FILE:8:4)
  | 
6 | @guppy(daggerable=True)
7 | def test_ho(f: Fn[[qubit], None], q: qubit) -> None:
8 |     f(q)
  |     ^^^^ This function cannot be called in a daggerable context

Help: To be able to use a higher-order function in a daggerable context, you
have to declare it as `Daggerable`

Guppy compilation failed due to 1 previous error
